@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2017-2019 the xine project
+ * Copyright (C) 2017-2020 the xine project
  *
  * This file is part of xine, a free video player.
  *
@@ -41,6 +41,7 @@ const plugin_info_t xine_plugin_info[] EXPORTED = {
   /* type, API, "name", version, special_info, init_function */
   { PLUGIN_INPUT,                       18, "tcp",  XINE_VERSION_CODE, NULL, input_net_init_class },
   { PLUGIN_INPUT,                       18, "tls",  XINE_VERSION_CODE, NULL, input_tls_init_class },
+  { PLUGIN_INPUT,                       18, "gopher", XINE_VERSION_CODE, NULL, input_gopher_init_class },
   { PLUGIN_INPUT | PLUGIN_MUST_PRELOAD, 18, "http", XINE_VERSION_CODE, NULL, input_http_init_class },
   { PLUGIN_INPUT,                       18, "rtsp", XINE_VERSION_CODE, NULL, input_rtsp_init_class },
   { PLUGIN_INPUT,                       18, "pnm",  XINE_VERSION_CODE, NULL, input_pnm_init_class },
